body overflow hidden to prevent window resizing

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 svg {
     position: absolute;
@@ -67,6 +68,7 @@ button, i {
     background: white;
     display: flex;
     flex-flow: column;
+    overflow: scroll;
 }
 #tools {
     /*background: pink;*/
